--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 language: python
 services:
   - docker
+env:
+  - DOCKER_COMPOSE_VERSION=1.17.0
 python:
   - "3.4"
   - "3.5"
   - "3.6"
- 
+  
 install:
+  - docker-compose build
   - pip install -r requirements.txt
   
 script:
